--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,18 +7,10 @@
     android:orientation="vertical"
     tools:context=".MainActivity">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="helloworld"/>
+  <EditText
+      android:id="@+id/et_save"
+      android:layout_width="200dp"
+      android:layout_height="wrap_content"/>
 
-    <ListView
-        android:id="@+id/list"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-
-
-
-    </ListView>
 
 </LinearLayout>
