--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.drawerlayout.widget.DrawerLayout
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/drawer_layout"
@@ -10,16 +10,29 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:layout_weight="1">
 
-        <Button
-            android:id="@+id/btn_open"
+        <ImageView
+            android:id="@+id/iv_result"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="열려라 참깨"></Button>
+            android:layout_height="match_parent"/>
 
     </LinearLayout>
-    <include layout="@layout/activity_drawer"/>
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:gravity="center">
 
-</androidx.drawerlayout.widget.DrawerLayout>
+        <Button
+            android:id="@+id/btn_capture"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="촬영"
+            android:background="#00BCD4" />
+
+    </LinearLayout>
+
+</LinearLayout>
