--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,16 +9,21 @@
     tools:context=".MainActivity">
 
     <Button
-        android:id="@+id/btn_dialog"
-        android:layout_width="wrap_content"
+        android:id="@+id/btn_start"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Dialog"/>
-    <TextView
-        android:id="@+id/tv_result"
-        android:layout_width="wrap_content"
+        android:text="서비스 시작"
+        android:layout_weight="1"
+        android:layout_margin="3sp"/>
+
+    <Button
+        android:id="@+id/btn_stop"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="test"
-        android:textSize="40sp"/>
+        android:text="서비스 종료"
+        android:layout_weight="1"
+        android:layout_margin="3sp"/>
+
 
 
 </LinearLayout>
