--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,14 +5,52 @@
     android:id="@+id/drawer_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="horizontal"
+    android:orientation="vertical"
     tools:context=".MainActivity">
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_weight="5"
+        android:orientation="vertical"
+        android:background="#8B000000">
+
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="500dp"
+            android:src="@drawable/nafla"
+            android:layout_gravity="center"
+            android:layout_marginTop="50dp"
+
+
+            />
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="45dp"
+            android:text="WE NEVER STOP"
+            android:textColor="#FDFCFC"
+            android:background="#000000"
+            android:textAlignment="center"
+            android:layout_marginTop="485dp"
+            android:textSize="20dp"
+
+            />
+
+    </RelativeLayout>
+
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:layout_alignParentBottom="true"
+        android:background="#E2000000">
 
     <Button
         android:id="@+id/btn_start"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="서비스 시작"
+        android:text="START"
         android:layout_weight="1"
         android:layout_margin="3sp"/>
 
@@ -20,9 +58,11 @@
         android:id="@+id/btn_stop"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="서비스 종료"
+        android:text="STOP"
         android:layout_weight="1"
         android:layout_margin="3sp"/>
+
+    </LinearLayout>
 
 
 
